--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "ffxiv-kill-counter",
   "version": "0.1.0",
   "private": true,
+  "repository": "https://github.com/ChalkPE/ffxiv-kill-counter",
+  "author": "ChalkPE",
+  "license": "MIT",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
   },
   "dependencies": {
     "core-js": "^3.3.2",
@@ -20,6 +24,7 @@
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "lint-staged": "^9.4.2",
+    "push-dir": "^0.4.1",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
     "vue-template-compiler": "^2.6.10"
@@ -27,7 +32,7 @@
   "eslintConfig": {
     "root": true,
     "env": {
-      "node": true
+      "browser": true
     },
     "extends": [
       "plugin:vue/essential",
@@ -44,8 +49,7 @@
     }
   },
   "browserslist": [
-    "> 1%",
-    "last 2 versions"
+    "chrome 45"
   ],
   "gitHooks": {
     "pre-commit": "lint-staged"
@@ -55,5 +59,8 @@
       "vue-cli-service lint",
       "git add"
     ]
+  },
+  "vue": {
+    "publicPath": "./"
   }
 }
